// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopoverAutoLayoutSettings snapshots > should render PreviewBoxSizing 1`] = `
<DocumentFragment>
  <div
    class="PreviewBoxSizing undefined"
  >
    <div
      class="PreviewBoxSizing__tile-left"
    >
      <div
        class="PreviewBoxSizing__tile-children"
      />
    </div>
    <div
      class="PreviewBoxSizing__tile-right"
    >
      <div
        class="PreviewBoxSizing__tile-children"
      />
    </div>
    <div
      class="PreviewBoxSizing__stroke undefined"
    />
  </div>
</DocumentFragment>
`;

exports[`PopoverAutoLayoutSettings snapshots > should render when excluded 1`] = `
<DocumentFragment>
  <div
    class="PreviewBoxSizing PreviewBoxSizing--excluded"
  >
    <div
      class="PreviewBoxSizing__tile-left"
    >
      <div
        class="PreviewBoxSizing__tile-children"
      />
    </div>
    <div
      class="PreviewBoxSizing__tile-right"
    >
      <div
        class="PreviewBoxSizing__tile-children"
      />
    </div>
    <div
      class="PreviewBoxSizing__stroke PreviewBoxSizing__stroke--excluded"
    />
  </div>
</DocumentFragment>
`;
